force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleView__c/Apttus_Config2__ProductAttributeRuleView__c.object-meta.xml
<CustomObject>
    <description>Represents a denormalized (materialized) view of product and attribute rule</description>
    <label>Product Attribute Rule View</label>
    <nameField>
        <displayFormat>PARV-{00000}</displayFormat>
        <label>Product Attribute Rule View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Rule Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>