force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleView__c/fields/Apttus_Config2__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines what records will be deleted after successfully creating new records.</description>
    <inlineHelpText>Determines what records will be deleted after successfully creating new records.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>