force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleView__c/fields/Apttus_Config2__ProductAttributeRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeRuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated product attribute rule</description>
    <inlineHelpText>ID of the associated product attribute rule</inlineHelpText>
    <label>Product Attribute Rule</label>
    <referenceTo>Apttus_Config2__ProductAttributeRule__c</referenceTo>
    <relationshipLabel>Attribute Rule Views</relationshipLabel>
    <relationshipName>AttributeRuleViews</relationshipName>
    <type>Lookup</type>
</CustomField>