force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleView__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Attribute Rule Views</relationshipLabel>
    <relationshipName>AttributeRuleViews</relationshipName>
    <type>Lookup</type>
</CustomField>